# dobot_cr5_configuration

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/cr10_moveit/share/cr10_moveit/: local_setup.sh  package.sh
install/cr12_moveit/share/cr12_moveit/: package.sh
install/cr16_moveit/share/cr16_moveit/: local_setup.sh  package.sh
install/cr3_moveit/share/cr3_moveit/: local_setup.sh  package.sh
install/cr5_moveit/share/cr5_moveit/: local_setup.sh  package.sh
install/cr5_moveit/share/cr5_moveit/launch/: full_bringup.launch.py
install/cr5_moveit_cpp_demo/lib/cr5_moveit_cpp_demo/: fake_zed_node  follow_target_node  matlab_slave_node  move_cr5_node  move_cr5_node_modular  reconnaissance_node  reworked_map_node
install/cr5_moveit_cpp_demo/share/ament_index/resource_index/package_run_dependencies/: cr5_moveit_cpp_demo
install/cr5_moveit_cpp_demo/share/cr5_moveit_cpp_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr5_moveit_cpp_demo/share/cr5_moveit_cpp_demo/cmake/: cr5_moveit_cpp_demoConfig.cmake
install/cr5_moveit_cpp_demo/share/cr5_moveit_cpp_demo/launch/: scripts_launch.launch.py
install/cr7_moveit/share/cr7_moveit/: package.sh
install/cra_description/share/cra_description/: local_setup.sh  package.sh
install/custom_messages/include/custom_messages/custom_messages/msg/: bounding_box.h  bounding_box.hpp  circumference.h  map.hpp  object.h  optimal_point.h  optimal_point.hpp
install/custom_messages/include/custom_messages/custom_messages/msg/detail/: bounding_box__functions.h  bounding_box__rosidl_typesupport_fastrtps_c.h  bounding_box__rosidl_typesupport_fastrtps_cpp.hpp  bounding_box__rosidl_typesupport_introspection_c.h  bounding_box__struct.h  bounding_box__traits.hpp  bounding_box__type_support.c  circumference__functions.h  circumference__rosidl_typesupport_fastrtps_cpp.hpp  circumference__rosidl_typesupport_introspection_c.h  circumference__struct.h  circumference__struct.hpp  circumference__traits.hpp  circumference__type_support.c  circumference__type_support.cpp  circumference__type_support.h  circumference__type_support.hpp  map__builder.hpp  map__functions.c  map__rosidl_typesupport_fastrtps_cpp.hpp  map__rosidl_typesupport_introspection_c.h  map__struct.hpp  map__type_support.c  map__type_support.h  map__type_support.hpp  object__functions.c  object__functions.h  object__rosidl_typesupport_introspection_c.h  object__traits.hpp  object__type_support.h  optimal_point__functions.c  optimal_point__functions.h  point__functions.c  (+9 more)
install/custom_messages/share/ament_index/resource_index/package_run_dependencies/: custom_messages
install/custom_messages/share/custom_messages/: package.sh
install/custom_messages/share/custom_messages/msg/: BoundingBox.idl  Map.idl  Map.msg  Object.idl  Point.idl
install/dobot_bringup_v3/lib/dobot_bringup_v3/: joint_states_bridge  listener_node  translater_node
install/dobot_bringup_v3/share/dobot_bringup_v3/: package.sh  package.xml
install/dobot_bringup_v3/share/dobot_bringup_v3/launch/: dobot_bringup_ros2.launch.py
install/dobot_demo/share/dobot_demo/: package.sh
install/dobot_gazebo/share/dobot_gazebo/: local_setup.sh  package.sh
install/dobot_moveit/share/dobot_moveit/: package.sh
install/dobot_msgs_v3/share/dobot_msgs_v3/: package.sh
install/dobot_rviz/share/dobot_rviz/: local_setup.sh  package.sh
install/dobot_rviz/share/dobot_rviz/urdf/: cr5_robot.urdf
install/nova2_moveit/share/nova2_moveit/: local_setup.sh  package.sh
install/nova5_moveit/share/nova5_moveit/: package.sh
install/servo_action/share/servo_action/: package.sh
log/: latest_build
src/cr5_moveit_cpp_demo/: CMakeLists.txt  dobot_startup.sh  dobot_stop.sh
src/cr5_moveit_cpp_demo/include/modules/: movement_controller.hpp  plant_processor.hpp  plant_scanner.hpp  scene_manager.hpp
src/cr5_moveit_cpp_demo/launch/: scripts_launch.launch.py
src/cr5_moveit_cpp_demo/scripts/: test_matlab_slave.py
src/cr5_moveit_cpp_demo/src/: fake_zed.cpp  follow_target.cpp  move_cr5_node.cpp  reconnaissance.cpp  reworked_map.cpp
src/cr5_moveit_cpp_demo/src/modules/: movement_controller.cpp  plant_processor.cpp  plant_scanner.cpp  scene_manager.cpp
src/cr5_moveit_cpp_demo/src/nodes/: move_cr5_node.cpp  move_cr5_node_modular.cpp
src/custom_messages/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/custom_messages/msg/: Circumference.msg
src/documentation/: instructions.md  modular_scanning_doc.md  real_dobot_launch_doc.md  reworked_map_doc.md  structure.md
(+5 files in other folders)
